fix: fixed spacing for sign in form when using v2 recaptcha

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -14,7 +14,9 @@
   }
 
   .g-recaptcha {
-    margin-bottom: 16px;
+    &--v2 {
+      margin-bottom: 16px;
+    }
   }
 }
 
